# gpscat

./: CMakeLists.txt  README.md  changelog.md  known_issue.md  temp.ces
experiments/LessIsMore/: bounds  result.csv  run.py
experiments/benchmarks/: 1.bc  11.bc  bellmanford.bc
include/gpscat/: AssemblyCostModel.h  AssemblyInstruction.h  CoFloCoWrapper.h  IRCostCalculator.h  IRLocator.h  MappingExtractor.h  Utils.h
lib/: AssemblyCostModel.cpp  CoFloCoWrapper.cpp  IRCostCalculator.cpp  IRLocator.cpp  MappingExtractor.cpp  Utils.cpp
lib/opt/: Debugify.cpp
tests/examples/: 1.c  10.bc  10.c  11.c  2.bc  2.c  3.bc  3.c  4.bc  4.c  5.bc  5.c  6.bc  6.c  7.bc  7.c  8.bc  8.c  9.bc  9.c  base64decode.bc  base64decode.c  base64encode.bc  base64encode.c  bellmanford.c  binarygcd.bc  binarygcd.c  binarysearch.bc  binarysearch.c  costModel.csv  gcd.bc  gcd.c  matmul.bc  matmul.c  mergesort.bc  mergesort.c  pow.bc  pow.c  quicksort.bc  quicksort.c  (+7 more)
tests/unittest/: CMakeLists.txt  testCoFloCoWrapper.cpp  testUtils.cpp
tools/: gpscat-cost.cpp  gpscat-score.cpp
